# Linked_list_lib_C

./: CMakeLists.txt  main.cpp
linked_list_lib/inc/: linked_list.h
linked_list_lib/include/: linked_list.h
linked_list_lib/src/: linked_list.c
llist_lib/: llist.c  llist.h
tests/: test1.cpp  test2.cpp
